# icosapi

./: .gitignore  README.md  SE-Htm_CP_areas.geojson  icos-cp-api.json  icos-cp-api.yaml  icos-cp.json  icos-cp.yaml  icos_cp_api.json  icos_cp_api.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  run_pytest.py  setup.cfg  tox.ini
.pylint.d/: tests.test_module_cp1.stats
autogenerate/: run.bat
autogenerate/docu/: index.html
autogenerate/python/: README.md  setup.py
autogenerate/python/docs/: DefaultApi.md
autogenerate/python/openapi_client/: __init__.py  api_client.py  configuration.py  rest.py
autogenerate/python/openapi_client/api/: default_api.py
autogenerate/python/openapi_client/models/: __init__.py
docu/: index.html
mockserver/: icoscp.py  requirements.txt  runsparql.py
mockserver.py/: icoscp.py  sparqls.py
python/: README.md
python/docs/: DefaultApi.md
python/openapi_client/: __init__.py  configuration.py
python/openapi_client/api/: default_api.py
python/test/: test_default_api.py
src/.pylint.d/: icosapi.cp1.stats  tests.module_cp_test1.stats
src/icosapi/: cp.py  main.py  run.py
src/icosapi/.pylint.d/: cp1.stats  main1.stats
src/icosapi/geometa/: dobj.yml  icos_M8STRfcQfU4Yj7Uy0snHvlve.xml  icos_iso19139.xml  main.py  test.yml
src/icosapi/spec/: cp_test_api.yaml
src/icosapi/tests/: __init__.py  test_flaskapp.py
src/tests/: conftest.py  test_module_cp.py  testapi.py
src/tests/.pylint.d/: api_test1.stats  module_test1.stats  modules_test1.stats  test_module_cp1.stats
(+3 files in other folders)
