[metadata]
name = icosapi
version = 0.0.1

author = ICOS Carbon Portal
author-email = info@icos-cp.eu

description = Setup an Openapi based interface
url = 'https://www.icos-cp.eu/'
project_urls=
    Source = https://github.com/ICOS-Carbon-Portal/pylib
    Documentation = https://icos-carbon-portal.github.io/pylib/
    DataPortal = https://data.icos-cp.eu/portal/
    SparqlEndpoint = https://meta.icos-cp.eu/sparqlclient/?type=CSV
    
license = BSD-3-Clause

classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: only
        

[options]
packages = icosapi
package_dir =
    = src
install_requires = requests
python_requires >= 3.6
include_package_data = True
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest
    
[options.package_data]
icosapi = py.typed

[flake8]
max-line-length = 160